scripts/frontend-ingress-uat.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: "frontend"
    kubernetes.io/tls-acme: "true"
  name: frontend-ingress
  namespace: uat
spec:
  tls:
  - hosts:
    - beta.kauri.io
    secretName: uat-frontend-tls
  rules:
    - host: beta.kauri.io
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80
            path: /
